Completed Custom Menu

--- a/src/app/core/base/preview-assets-storage/preview-assets-storage.component.html
+++ b/src/app/core/base/preview-assets-storage/preview-assets-storage.component.html
@@ -109,7 +109,7 @@
 
 <app-confirmation #deleteConfirmation modalTitle="Delete Collection" (confirm)="onDeleteCollection()">
   <div class="modal-content-holder" i18n>
-    Do you want delete collection
+      Are you sure you want to delete colllection
     <b>{{ collection.title }}</b>?
   </div>
 </app-confirmation>
