--- a/src/app/core/base/confirmation/confirmation.component.html
+++ b/src/app/core/base/confirmation/confirmation.component.html
@@ -1,8 +1,8 @@
 <div bsModal #confirmationModal="bs-modal" class="modal fade" [config]="{ backdrop: 'static' }" (onHidden)="clear()">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">{{ modalTitle }}</h5>
+      <div class="modal-header bg-danger">
+        <h5 class="modal-title text-white">{{ modalTitle }}</h5>
         <button type="button" class="close" aria-label="Close" (click)="onDismiss($event)">
           <span aria-hidden="true">&times;</span>
         </button>
